-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 11
-
Component/s: hotspot
-
b01
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8350750 | openjdk8u452 | Denghui Dong | P4 | Resolved | Fixed | b04 |
| JDK-8361007 | shenandoah8u452 | Denghui Dong | P4 | Resolved | Fixed | b04 |
jio_snprintf(chunk_path, chunkname_max_len, "%s%s%s%s", repository_path_len, os::file_separator(), date_time_buffer, chunk_file_jfr_ext);
Should change repository_path_len to repository_path
Should change repository_path_len to repository_path
- backported by
-
JDK-8350750 Wrong format parameter in create_emergency_chunk_path
-
- Resolved
-
-
JDK-8361007 Wrong format parameter in create_emergency_chunk_path
-
- Resolved
-
- duplicates
-
JDK-8343334 JFR crash in JfrEmergencyDump::build_dump_path
-
- Closed
-
- relates to
-
JDK-8226511 Implement JFR Event Streaming
-
- Resolved
-
-
JDK-8217362 Emergency dump does not work when disk=false is set
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/898e1312
-
Review(master)
openjdk/jdk8u-dev/602
(2 links to)