8261020: Wrong format parameter in create_emergency_chunk_path

Reviewed-by: sgehwolf
Backport-of: d27533f1967411dfd1b50b3fe0f0cebb936f1d3a